<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.LoginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">


    <EditText
        android:id="@+id/passwordLogin_txtInput"
        android:layout_width="391dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/darkBack"
        android:ems="10"
        android:hint="Password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:textColorHint="@color/darkBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLogin_txtInput"
        app:layout_constraintVertical_bias="0.079" />

    <EditText
        android:id="@+id/usernameLogin_txtInput"
        android:layout_width="387dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/darkBack"
        android:hint="Username"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/darkBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />

    <Button
        android:id="@+id/sendLoginReq_btn"
        android:layout_width="245dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/navy_bg"
        android:fontFamily="sans-serif"
        android:text="Login"
        android:textColor="@color/txtclr"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />


    <Button
        android:id="@+id/toHome_loginPagebtn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/background"
        android:text="Back"
        android:textColor="@color/txtclr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/toSignupBtn"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/darkBack"
        android:text="Sign Up"
        android:textColor="@color/txtclr"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.798" />

    <TextView
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/darkBack"
        android:ems="10"
        android:gravity="center"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/txtclr"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/loginReqResponse_txt"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:clickable="false"
        android:ems="10"
        android:text="Response"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.708" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="162dp"
        android:layout_height="32dp"
        android:text="No Account?"
        android:textAlignment="center"
        android:textColor="@color/txtclr"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toSignupBtn"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.789" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="270dp"
        android:layout_height="210dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083"
        app:srcCompat="@drawable/birdiebucks_logos_transparent" />

</androidx.constraintlayout.widget.ConstraintLayout>